Avoid break inside

--- a/packages/css/src/components/field-set/field-set.scss
+++ b/packages/css/src/components/field-set/field-set.scss
@@ -14,6 +14,8 @@
 }
 
 .ams-field-set {
+  break-inside: avoid;
+
   @include reset;
 }
 
